# keypass

./: .gitignore  README.md  pyproject.toml
src/keypass/: __init__.py  main.py
static/: index.html
